fix typo, sent to committee

--- a/writeup/AnhLe_proposal.tex
+++ b/writeup/AnhLe_proposal.tex
@@ -51,7 +51,7 @@
 \usepackage{natbib}
 \bibpunct{(}{)}{;}{a}{}{,} % no comma between author and year
 
-\title{Prospectus: The effect of corruption on FDI technological spillover}
+\title{Prospectus: The political determinants of FDI technological spillover and corruption}
 \author{Anh Le}
 
 
@@ -61,10 +61,10 @@
 \section{Empirical Puzzle}
 \input{empirical_puzzle}
 
-\section{Tentative Evidence}
+\section{Stylized Facts}
 \input{preliminary_evidence}
 
-\section{Generalized Theory}
+\section{Theory}
 \input{trade_off}
 
 \section{Contextualized theory}
